# profile-crop

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-01-29-circular-image-crop-cli-design.md
src/: download.rs  lib.rs  main.rs  process.rs
