[package]
name = "ccrop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to download images from URLs and apply circular crops with transparent backgrounds"
repository = "https://github.com/YOUR_USERNAME/profile-crop"
license = "MIT"
keywords = ["image", "crop", "cli", "circular", "avatar"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "ccrop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
